<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_airfose">

    <fragment
        android:id="@+id/navigation_airfose"
        android:name="com.colbycoapps.med_standards.ui.airforse.AirForceFragment"
        android:label="@string/title_airforse"
        tools:layout="@layout/fragment_airforse" />

    <fragment
        android:id="@+id/navigation_army"
        android:name="com.colbycoapps.med_standards.ui.army.ArmyFragment"
        android:label="@string/title_army"
        tools:layout="@layout/fragment_army" />

    <fragment
        android:id="@+id/navigation_navy"
        android:name="com.colbycoapps.med_standards.ui.navy.NavyFragment"
        android:label="@string/title_navy"
        tools:layout="@layout/fragment_navy" />

    <fragment
        android:id="@+id/navigation_dod"
        android:name="com.colbycoapps.med_standards.ui.dod.DodFragment"
        android:label="@string/title_dod"
        tools:layout="@layout/fragment_dod" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.colbycoapps.med_standards.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" >
        <action
            android:id="@+id/action_navigation_about_to_navigation_about_app"
            app:destination="@id/navigation_about_app" />
        <action
            android:id="@+id/action_navigation_about_to_navigation_subscriptin"
            app:destination="@id/navigation_subscriptin" />
    </fragment>

    <fragment
        android:id="@+id/navigation_subscriptin"
        android:name="com.colbycoapps.med_standards.ui.about.SubscriptionFragment"
        android:label="Subscription plan"
        tools:layout="@layout/fragment_subscription" />
    <fragment
        android:id="@+id/navigation_about_app"
        android:name="com.colbycoapps.med_standards.ui.about.AboutAppFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about_app" />
</navigation>